--- a/imc-2023-submission-example-0fa707.ipynb
+++ b/imc-2023-submission-example-0fa707.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "'A notebook to generate a valid submission. Implements three local feature/matcher methods: LoFTR, DISK, and KeyNetAffNetHardNet.\\n\\nRemember to enable a GPU accelerator and disable internet access, then press \"submit\" on the right pane.'"
+       "' Implements three local feature/matcher methods: LoFTR, DISK, and KeyNetAffNetHardNet.\\n\\nRemember to enable a GPU accelerator and disable internet access, then press \"submit\" on the right pane.'"
       ]
      },
      "execution_count": 1,
