--- a/imc-2023-submission-example-0fa707.ipynb
+++ b/imc-2023-submission-example-0fa707.ipynb
@@ -33,11 +33,11 @@
     }
    ],
    "source": [
-    "## Baseline submission\n",
+    "## Overview\n",
     "\n",
-    "'''A notebook to generate a valid submission. Implements three local feature/matcher methods: LoFTR, DISK, and KeyNetAffNetHardNet.\n",
+    "''' Implements three local feature/matcher methods: LoFTR, DISK, and KeyNetAffNetHardNet.\n",
     "\n",
-    "Remember to enable a GPU accelerator and disable internet access, then press \"submit\" on the right pane.'''"
+    
    ]
   },
   {
